blue review changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,160 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>BlueReview</title>
+  </head>
+  <body>
+    <div class="boxed_1">
+       <p class="orange_review">ORANGE REVIEW</p>
+       <p class="tags">TAGS</p><p class="topics">TOPICS</p>
+     </div>
+    <h1>
+      <%= image_tag("hero-1.jpg", class:"hero-1") %>
+    </h1>
+    <div>
+        <div class="text-over-title">
+          <h2 class="orange-review-edition-1"
+           >ORANGE REVIEW - EDITION 1 </h2>
+           <h3 class="atimetravel"> A TIME TRAVEL </h3>
+           <h4 class="postcard">POSTCARD</h4>
+           <h5>Posted 19 May 2018</h5>
+           <h5><u>3 Comments </u></h5>
+         </div>
+         <div>
+          <button class="travel">#TRAVEL </button>
+          <button class="personal">#PERSONAL </button>
+          <button class="food">#FOOD</button>
+          <button class="tags_for_likes">#TAGS FOR LIKES</button>
+         </div>
+      </div>
+ <section>
+<div class="paragraph1">New Ideas For A Low Cost</div>
+</section>
+<section>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <br></br>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+</section>
+  </body>
+        </div>
+    </div>
+    <section>
+      <div class="paragraph1">
+      New Ideas For A Low Cost
+      </div>
+      <div class="paragraph2">Vacation On Water
+      </div>
+    </section>
+    <section class="section2" "width=100%">
+      <p class="paragraph3" style="line-height: 200%">
+      <img class="icon-logo" src="assets/icon-logo.png" alt="icon-logo" width=5% height=5%>
+      <span class="orange_text">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <br>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </section>
+     <section>
+      <div>
+        <%= image_tag("bg-quote.jpg", class:"bg-quote") %>
+        <div class="text-over-title-2">
+          <p class="ut" style="line-height: 200%">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </div>
+    </section>
+     <section class="section3" "width=100%">
+      <p class="paragraph4" style="line-height: 200%">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </section>
+     <section>
+      <div>
+        <p>
+        <img class="image" src="assets/image.png" alt="image" width=50% height=50%>
+        </p>
+        <div class="caption">Nunc ac neque at felis fringilla rhoncus
+        </div>
+      </div>
+    </section>
+     <section class="section4" width="100%" height="100%">
+      <div>
+        <div class="paragraph6-container">
+          <p class="paragraph5" style="line-height: 100%">CRUISING DESTINATION IDEAS</p>
+           <p class="paragraph6" style="line-height: 200%">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
+      </div>
+      <div>
+        <div class="paragraph7-container">
+         <p class="paragraph7" style="line-height: 20%">
+            The Kansas City Chiefs
+          </p>
+          <p class="paragraph8" style="line-height: 20%">
+            The Luxury Of Traveling With Yacht Charter Companies
+          </p>
+          <p class="paragraph9" style="line-height: 20%">
+            Get Around Easily With A New York Limousine Service
+          </p>
+          <p class="paragraph10" style="line-height: 20%">
+            Big Savings On Gas While You Travel
+          </p>
+        </div>
+      </div>
+      <div>
+        <p class="paragraph11" style="line-height: 100%">FIVE TIPS FOR LOW COST HOLIDAYS</p>
+         <p class="paragraph12" style="line-height: 200%">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur.
+        <img class="bg-ad-1" src="assets/bg-ad-1.jpg" alt="bg-ad-1" width=25% height=50%>
+        </p>
+        <p class="top-best-list-of">Top Best List Of</p>
+        <p class="restaurants-at">Restaurants At</p>
+        <p class="your-destination">Your Destination</p>
+        <button class="learn-more">Learn More</button>
+        </div>
+    </section>
+    <section class="header2">
+      <div class="boxed_2">
+       <p class="orange_review_2">ORANGE REVIEW</p>
+       <p class="the-best-travel-tips">The Best Travel Tips</p>
+       <footer> class="copyright-2018-build-carolina">Copyright 2018, Build Carolina</footer>
+     </div>
+    </section>
+  </section>
+  </body>
+</html>
