Changes to Blue Review

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,7 +59,7 @@
     </section>
     <section class="section2" "width=100%">
       <p class="paragraph3" style="line-height: 200%">
-      <img class="icon-logo" src="assets/icon-logo.png" alt="icon-logo" width=5% height=5%>
+      <%= image_tag("icon-logo.png", class:"icon-logo") %>
       <span class="orange_text">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -97,7 +97,7 @@
      <section>
       <div>
         <p>
-        <img class="image" src="assets/image.png" alt="image" width=50% height=50%>
+        <%= image_tag("image.png", class:"image") %>
         </p>
         <div class="caption">Nunc ac neque at felis fringilla rhoncus
         </div>
@@ -140,7 +140,7 @@
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur.
-        <img class="bg-ad-1" src="assets/bg-ad-1.jpg" alt="bg-ad-1" width=25% height=50%>
+        <%= image_tag("bg-ad-1.jpg", class:"bg-ad-1") %>
         </p>
         <p class="top-best-list-of">Top Best List Of</p>
         <p class="restaurants-at">Restaurants At</p>
